--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,4 @@
+//API com ícones:
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 /* Variáveis */
@@ -7,8 +8,10 @@
   --textColor: #191102;
   --textFade: #86a87d;
   --tertiary: #bbd8b3;
-
   --fade: #cfffc3;
+  --brightness: #ffffff;
+
+ 
 }
 
 /* Estilos gerais */
@@ -24,10 +27,13 @@
 
 body {
   display: flex;
+  flex-direction: column;
   align-items: center;
+  gap: 2rem;
   justify-content: center;
   min-height: 100vh;
   background: var(--primary);
+  transition: 1s;
 }
 
 li,
@@ -36,13 +42,37 @@ span {
   color: var(--textColor);
 }
 
+/* Botão do modo Dark/Light */
+
+.light-switcher {
+  background-color: var(--textColor);
+  border: 3px solid var(--fade);
+  color: var(--primary);
+  width: 5rem;
+  height: 2.5rem;
+  cursor: pointer;
+  border-radius: 1.3rem;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
+}
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 700, "GRAD" 0, "opsz" 50;
+}
+
+.light-switcher:hover {
+  transition: all 0.3s;
+  background-color: var(--textColor);
+  color: var(--fade);
+  border: 2px solid var(--fade);
+}
+
 /* Estilização do calendário */
 
 .wrapper {
-  width: 450px;
+  width: 550px;
   background: var(--tertiary);
   border-radius: 1.2rem;
-  border: 3.5px solid var(--textFade);
+  border: 5px solid var(--textFade);
+  box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.5);
 }
 
 /* Cabeçalho */
@@ -140,12 +170,95 @@ header .icons span:last-child {
 }
 
 .days li.active::before {
-  background-color: #b33939;
+  background-color: var(--primary);
   border: solid 0.2px var(--fade);
 }
 
 .days li.active:hover::before {
-  transition: 0.2s;
+  transition: 0.5s;
   background-color: var(--fade);
   border: solid 0.2px var(--textColor);
 }
+
+/*Footer*/
+
+footer {
+  background-color: var(--tertiary);  
+  /* Essa configuração funciona se a altura do seu footer não for dinâmica: */
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4rem;
+  border-top: solid 2px var(--fade);
+}
+
+footer .footer-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 0.7rem;
+  height: 100%;
+}
+
+footer .footer-wrapper hr {
+  width: 100%;
+  background-color: var(--textColor);
+}
+
+footer .footer-wrapper .footer-text {
+  font-style: italic;
+  font-weight: 500;
+}
+footer .footer-wrapper .footer-text a {
+  text-decoration: none;
+  color: var(--fade);
+  font-weight: 700;
+  font-size: 0.8rem;
+  text-shadow: #0000008a 2px 2px 2px;  
+}
+footer .footer-wrapper .footer-text a:hover {
+  transition: 0.5s;
+  color: var(--textColor);
+  font-size: 0.9rem;
+  text-shadow: none;
+}
+
+/* Clock - configuração */
+
+.clock {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 150px;
+  width: 395px;
+  background-color: transparent;
+  border-radius: 1.5rem;
+  box-shadow: 5px 0px 25px rgba(0, 0, 0, 0.5);
+}
+
+
+.clock div {
+  height: 130px;
+  width: 110px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-shadow: var(--brightness) 1px 1px 2px;
+  background-color: var(--tertiary);
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);  
+  border-radius: 15%;
+  letter-spacing: 3px;
+}
+
+.clock span {
+  font-weight: bolder;
+  font-size: 50px;
+}
+
+.clock span.time {
+  font-size: 10px;
+
+}
+
